--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,7 +1,7 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/jammy64"  # Use the latest version of Ubuntu 22.04 (Jammy Jellyfish)
   config.vm.hostname = ENV['VM_NAME']
-  
+
   # Set VM resources
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "24576"  # 24GB RAM
@@ -11,18 +11,18 @@ Vagrant.configure("2") do |config|
 
     # Set the graphics controller
     # login screen will not display properly unless graphics controller is VMSVGA
-    vb.customize ["modifyvm", :id, "--graphicscontroller", "VMSVGA"]    
+    vb.customize ["modifyvm", :id, "--graphicscontroller", "VMSVGA"]
 
     # Set vbguest plugin to auto update Guest Additions
-    # config.vbguest.auto_update = true
-    config.vbguest.auto_update = false if Vagrant.has_plugin?('vagrant-vbguest')   
+    config.vbguest.auto_update = true
+    # config.vbguest.auto_update = false if Vagrant.has_plugin?('vagrant-vbguest')
 
     # Set video memory to 64 MB
-    vb.customize ["modifyvm", :id, "--vram", "64"]    
+    vb.customize ["modifyvm", :id, "--vram", "64"]
 
     config.vm.provision "file", source: "./env", destination: "/tmp/env"
   end
-  
+
   # Give the VM a specific name
   config.vm.define "big-bang-vm" do |bigbang|
     # Shell provisioner to execute commands
@@ -35,31 +35,35 @@ Vagrant.configure("2") do |config|
       sudo adduser --disabled-password --gecos "" ${BIGBANG_USER}
       echo "${BIGBANG_USER}:${BIGBANG_USER}" | sudo chpasswd 2>/dev/null
       sudo usermod -aG sudo ${BIGBANG_PASSWORD}
-
-      mkdir -p /home/${BIGBANG_USER}/git
       
+      # checkout git repos
+      mkdir -p /home/${BIGBANG_USER}/git      
       cd /home/${BIGBANG_USER}/git/
-      git clone -b ${GIT_BRANCH} https://github.com/me-datacorn-now/macm-unicorns-bigbang.git
-      git clone https://repo1.dso.mil/big-bang/bigbang.git
-      git logs | head
-      git checkout tags/$(grep 'tag:' base/gitrepository.yaml | awk '{print $2}')      
-      git logs | head
 
-      sudo mv /tmp/env /home/bigbang/git/macm-unicorns-bigbang/bin/
+      # checkout macm-unicorns-bigbang repo
+      git clone -b ${GIT_BRANCH} https://github.com/me-datacorn-now/macm-unicorns-bigbang.git
+      cd ./macm-unicorns-bigbang
+      sudo mv /tmp/env ./bin
+      git log | head      
+      cd ..
+
+      # checkout bigbang repo
+      git clone https://repo1.dso.mil/big-bang/bigbang.git
+      cd ./bigbang      
+      git checkout tags/$(grep 'tag:' base/gitrepository.yaml | awk '{print $2}')
+      git log | head      
 
       sudo chown -R ${BIGBANG_USER}:${BIGBANG_USER} /home/${BIGBANG_USER}
 
-      # install 1password
+      # add 1password repo
       curl -sS https://downloads.1password.com/linux/keys/1password.asc | sudo gpg --dearmor --output /usr/share/keyrings/1password-archive-keyring.gpg
       echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/1password-archive-keyring.gpg] https://downloads.1password.com/linux/debian/amd64 stable main' | sudo tee /etc/apt/sources.list.d/1password.list
       sudo mkdir -p /etc/debsig/policies/AC2D62742012EA22/
       curl -sS https://downloads.1password.com/linux/debian/debsig/1password.pol | sudo tee /etc/debsig/policies/AC2D62742012EA22/1password.pol
       sudo mkdir -p /usr/share/debsig/keyrings/AC2D62742012EA22
       curl -sS https://downloads.1password.com/linux/keys/1password.asc | sudo gpg --dearmor --output /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg
-      sudo apt update -y
-      sudo apt install -y 1password
 
-      # install vscodium
+      # add vscodium repo
       wget -qO - https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/raw/master/pub.gpg \
       | gpg --dearmor \
       | sudo dd of=/usr/share/keyrings/vscodium-archive-keyring.gpg
@@ -67,21 +71,22 @@ Vagrant.configure("2") do |config|
       echo 'deb [ signed-by=/usr/share/keyrings/vscodium-archive-keyring.gpg ] https://download.vscodium.com/debs vscodium main' \
       | sudo tee /etc/apt/sources.list.d/vscodium.list
 
-      sudo apt update && sudo apt install -y codium      
+      # apt update/upgrade/install
+      sudo apt update
+      sudo apt -y upgrade
 
-      # Update the system and install necessary packages
-      # sudo apt-get update -y
-      sudo apt-get upgrade -y
-      sudo apt-get install -y docker.io
-      sudo apt install -y ubuntu-desktop
-      # Clean up
-      sudo apt-get autoremove -y
-      sudo apt-get clean      
+      sudo apt install ubuntu-desktop docker.io codium 1password -y
 
-      # Install k3d
+      sudo apt -y autoremove
+      sudo apt clean
+
+      # add user to docker group
+      sudo usermod -aG docker ${BIGBANG_USER}      
+
+      # install k3d
       curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | bash
 
-      # Install Helm
+      # install Helm
       curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
       # install kubectl
@@ -92,44 +97,8 @@ Vagrant.configure("2") do |config|
       # install k9s
       wget https://github.com/derailed/k9s/releases/download/v0.30.8/k9s_linux_amd64.deb
       sudo apt -y install -f ./k9s_linux_amd64.deb
-      rm k9s_linux_amd64.deb
+      rm k9s_linux_amd64.deb      
 
-      # Needed for ECK to run correctly without OOM errors
-      echo 'vm.max_map_count=524288' | sudo tee -a /etc/sysctl.d/vm-max_map_count.conf
-      # Alternatively can use (not persistent after restart):
-      # sudo sysctl -w vm.max_map_count=524288
-
-      # Needed by Sonarqube
-      echo 'fs.file-max=131072' | sudo tee -a /etc/sysctl.d/fs-file-max.conf
-      # Alternatively can use (not persistent after restart):  
-      # sudo sysctl -w fs.file-max=131072
-
-      # Also Needed by Sonarqube
-      ulimit -n 131072
-      ulimit -u 8192
-
-      # Load updated configuration
-      sudo sysctl --load --system
-
-      # Preload kernel modules, required by istio-init running on SELinux enforcing instances
-      sudo modprobe xt_REDIRECT
-      sudo modprobe xt_owner
-      sudo modprobe xt_statistic
-
-      # Persist kernel modules settings after reboots
-      printf "xt_REDIRECT\nxt_owner\nxt_statistic\n" | sudo tee -a /etc/modules
-
-      # Kubernetes requires swap disabled
-      # Turn off all swap devices and files (won't last reboot)
-      sudo swapoff -a
-
-      # For swap to stay off, you can remove any references found via
-      # cat /proc/swaps
-      # cat /etc/fstab
-
-      # sudo useradd -m -p $(openssl passwd -1 password) bigbang
-      sudo usermod -aG docker bigbang
-      
       sudo shutdown now
 
     SHELL
